--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,41 @@
+body {
+    margin: 0px;
+}
+
 .header,
 .body1,
 .footer {
     background-color: #1F2937;
+}
+
+.header {
+    display: flex;
+    padding: 0px 10vw;
+    justify-content: space-between;
+}
+
+h1{
+    margin: 0px;
+}
+
+.header .right {
+    display: flex;
+    gap: 20px;
+}
+
+.body1 {
+    padding: 60px 10vw;
+    display: flex;
+    flex: 1;
+}
+
+.body1 .left {
+    width: 40vw;
+}
+
+.body1 img {
+    width: 40vw;
+    height: auto;
 }
 
 .body1 h1 {
@@ -10,34 +44,104 @@
     font-size: 48px;
 }
 
-.body1 p,
-.body1 button {
+.body1,
+.header a {
     color: #E5E7EB;
     font-size: 18px;
 }
 
-.header {
+.header .left { /* I find this unnecessary, as the logo ought to be an image, but I've put this here as instructed, and it does affect the alt text*/
     color: #F9FAF8;
-    font-weight: 24px;
+    font-size: 24px;
 }
 
 button,
-.frame {
+.body4 .frame {
     background-color: #3882F6;
 }
 
-h2 {
+button {
+    border-radius: 6px;
+    color: #E5E7EB;
+    padding: 4px 20px;
+    border-width: 0px;
+}
+
+.l-to-r-contents {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 5vw;
+}
+
+.l-to-r-contents img {
+    width: 10vw;
+    height: auto;
+    border: solid 2px  #3882F6;
+    border-radius: 12px;
+}
+
+.l-to-r-contents p {
+    text-wrap: wrap;
+    width: 10vw;
+}
+
+
+.body2 {
+    padding-top: 20px;
+    padding-bottom: 60px;
+}
+.body2 h2 {
     color: #1F2937;
     font-weight: 900;
     font-size: 36px;
+    text-align: center;
+    margin: 0px 0px 20px 0px;
 }
 
 .body3 {
     background-color: #E5E7EB;
+    padding: 60px 20vw;
 }
 
-.body3 p {
+.body3 .quote {
     font-style: italic;
     color: #1F2937;
     font-size: 36px;
+    font-weight: 100;
+    margin: 0px;
+}
+.body3 .attribution {
+    text-align: right;
+}
+
+.body4 {
+    padding: 60px 10vw;
+}
+
+.body4 .frame {
+    border-radius: 6px;
+    display: flex;
+    justify-content: space-evenly;
+    padding: 20px 0px;
+}
+
+.body4 .right {
+    align-self: center;
+}
+
+.body4 p {
+    margin-bottom: 0px;
+}
+
+.body4 button {
+    border-width: 1px;
+    border-color: #E5E7EB;
+    border-style: solid;
+}
+
+.footer {
+    color: #E5E7EB;
+    text-align: center;
+    padding: 20px;
 }
