--- a/styles.css
+++ b/styles.css
@@ -65,6 +65,7 @@ button {
     color: #E5E7EB;
     padding: 4px 20px;
     border-width: 0px;
+    width: 90px;
 }
 
 .l-to-r-contents {
@@ -116,14 +117,21 @@ button {
 }
 
 .body4 {
+    display: flex;
     padding: 60px 10vw;
+    justify-content: center;
 }
 
 .body4 .frame {
     border-radius: 6px;
     display: flex;
-    justify-content: space-evenly;
-    padding: 20px 0px;
+    justify-content: space-between;
+    padding: 20px 60px;
+    gap: 60px;
+}
+
+.body4 .right {
+    display: block
 }
 
 .body4 .right {
